<?xml version="1.0"?>
<package>
  <name>laser_to_cloud</name>
  <version>0.0.0</version>
  <description>The laser_to_cloud package</description>
  <maintainer email="wunailiang@gmail.com">wnl</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/laser_to_cloud</url>
  <author email="wunailiang@gmail.com">wnl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
